--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -30,7 +30,7 @@ spec:
               apt-get update && \
               apt-get install -y nano zsh transmission transmission-daemon && \
               sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
-              transmission-daemon --foreground --log-debug -a '*'
+              transmission-daemon --foreground --log-debug -a '*' --auth --username user --password pass
       initContainers:
         - name: gluetun-updater
           image: qmcgaw/gluetun:v3.39.0
