--- a/apps/arr/qbittorrent/kustomization.yaml
+++ b/apps/arr/qbittorrent/kustomization.yaml
@@ -19,6 +19,10 @@ secretGenerator:
     options:
       disableNameSuffixHash: true
 configMapGenerator:
+  - name: wg-conf
+    namespace: arr
+    files:
+      - wg0.conf=config/wg0.conf
   - name: gluetun-auth
     namespace: arr
     files:
