--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -42,7 +42,7 @@ spec:
                   - /bin/sh
                   - -c
                   - |
-                    cp /config/wg0-template.conf /config/wg_confs/wg0.conf;
+                    cat /config/wg0-template.conf > /config/wg_confs/wg0.conf;
                     sed -i "s|__PRIVATE_KEY__|${WIREGUARD_PRIVATE_KEY}|g" /config/wg_confs/wg0.conf;
           securityContext:
             capabilities:
