--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -35,6 +35,7 @@ spec:
         - name: wireguard
           image: ghcr.io/linuxserver/wireguard:latest
           restartPolicy: Always
+          command: ['tail', '-f', '/dev/null']
           lifecycle:
             postStart:
               exec:
