--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -36,15 +36,15 @@ spec:
           image: ghcr.io/linuxserver/wireguard:latest
           restartPolicy: Always
           command: ['tail', '-f', '/dev/null']
-          lifecycle:
-            postStart:
-              exec:
-                command:
-                  - /bin/sh
-                  - -c
-                  - |
-                    cp /config/wg0-template.conf /config/wg_confs/wg0.conf;
-                    sed -i "s|__PRIVATE_KEY__|${WIREGUARD_PRIVATE_KEY}|g" /config/wg_confs/wg0.conf;
+#          lifecycle:
+#            postStart:
+#              exec:
+#                command:
+#                  - /bin/sh
+#                  - -c
+#                  - |
+#                    cp /config/wg0-template.conf /config/wg_confs/wg0.conf;
+#                    sed -i "s|__PRIVATE_KEY__|${WIREGUARD_PRIVATE_KEY}|g" /config/wg_confs/wg0.conf;
           securityContext:
             capabilities:
               add:
