--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -35,7 +35,7 @@ spec:
         - name: wireguard
           image: ghcr.io/linuxserver/wireguard:latest
           restartPolicy: Always
-          command: ['whoami > /whoami; ','tail', '-f', '/dev/null']
+          command: ['whoami > whoami.txt; ','tail', '-f', '/dev/null']
 #          lifecycle:
 #            postStart:
 #              exec:
