--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -35,13 +35,14 @@ spec:
         - name: wireguard
           image: ghcr.io/linuxserver/wireguard:latest
           restartPolicy: Always
-          command: ['whoami > whoami.txt; ','tail', '-f', '/dev/null']
-#          lifecycle:
-#            postStart:
-#              exec:
-#                command:
-#                  - /bin/sh
-#                  - -c
+          command: ['tail', '-f', '/dev/null']
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - /bin/sh
+                  - -c
+                  - whoami > /whoami
 #                  - |
 #                    cp /config/wg0-template.conf /config/wg_confs/wg0.conf;
 #                    sed -i "s|__PRIVATE_KEY__|${WIREGUARD_PRIVATE_KEY}|g" /config/wg_confs/wg0.conf;
