--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -69,6 +69,8 @@ spec:
               add:
                 - NET_ADMIN
           env:
+            - name: LOG_LEVEL
+              value: debug
             ###################### REQUIRED ######################
             - name: DOT
               value: "off"
