--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -79,7 +79,7 @@ spec:
             - name: VPN_SERVICE_PROVIDER
               value: protonvpn
             - name: VPN_TYPE
-              value: openvpn
+              value: wireguard
             - name: VPN_PORT_FORWARDING
               value: 'on'
             - name: PORT_FORWARD_ONLY
@@ -94,10 +94,12 @@ spec:
               value: 'on'
             - name: SERVER_COUNTRIES
               value: Slovakia
-#            - name: WIREGUARD_ENDPOINT_IP
-#              value: 138.199.34.193
-#            - name: WIREGUARD_ADDRESSES
-#              value: 10.2.0.2/32
+            - name: WIREGUARD_ENDPOINT_IP
+              value: 138.199.34.193
+            - name: WIREGUARD_ADDRESSES
+              value: 10.2.0.2/32
+            - name: WIREGUARD_MTU
+              value: '1200'
           envFrom:
             - secretRef:
                 name: wireguard-secret
