--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -34,7 +34,7 @@ spec:
               transmission-daemon --foreground --log-debug -a '*' --auth --username user --password pass
       initContainers:
         - name: gluetun-updater
-          image: qmcgaw/gluetun:v3.39.0
+          image: qmcgaw/gluetun:v3.32.0
           command:
             - /bin/sh
             - -c
@@ -98,8 +98,8 @@ spec:
               value: 138.199.34.193
             - name: WIREGUARD_ADDRESSES
               value: 10.2.0.2/32
-            - name: WIREGUARD_MTU
-              value: '1420'
+#            - name: WIREGUARD_MTU
+#              value: '1420'
           envFrom:
             - secretRef:
                 name: wireguard-secret
