--- a/apps/arr/qbittorrent/deployment-test.yaml
+++ b/apps/arr/qbittorrent/deployment-test.yaml
@@ -18,19 +18,48 @@ spec:
         app: vpn-test
     spec:
       containers:
-        - name: python
-          image: python
+
+        - name: qbittorrent
+          image: ghcr.io/linuxserver/qbittorrent:5.0.3-r0-ls379
           ports:
-            - containerPort: 9091
-              name: transmission
-          command:
-            - /bin/bash
-            - -c
-            - |
-              apt-get update && \
-              apt-get install -y nano zsh transmission transmission-daemon tcpdump iputils-ping netcat-traditional traceroute && \
-              sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
-              tail -f /dev/null
+            - name: qbittorrent-web
+              containerPort: 8080
+#            - name: torrent
+#              containerPort: 18863
+          env:
+            - name: TZ
+              value: Europe/Warsaw
+            - name: PUID
+              value: '1000'
+            - name: PGID
+              value: '1000'
+#            - name: TORRENTING_PORT
+#              value: '18863'
+            - name: DOCKER_MODS
+              value: ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest|ghcr.io/t-anc/gsp-qbittorent-gluetun-sync-port-mod:main
+          envFrom:
+            - secretRef:
+                name: gluetun-apikey
+          volumeMounts:
+            - mountPath: /config
+              name: config
+            - mountPath: /downloads
+              name: downloads
+#            - mountPath: /vuetorrent
+#              name: vuetorrent
+#        - name: python
+#          image: python
+#          ports:
+#            - containerPort: 9091
+#              name: transmission
+#          command:
+#            - /bin/bash
+#            - -c
+#            - |
+#              apt-get update && \
+#              apt-get install -y nano zsh transmission transmission-daemon tcpdump iputils-ping netcat-traditional traceroute net-tools && \
+#              sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
+#              tail -f /dev/null
 #              transmission-daemon --foreground --log-debug -a '*' --auth --username user --password pass
       initContainers:
         - name: gluetun-updater
@@ -143,7 +172,7 @@ metadata:
 spec:
   ports:
     - port: 9091
-      targetPort: transmission
+      targetPort: qbittorrent-web
       name: transmission
   selector:
     app.kubernetes.io/name: vpn-test
