--- a/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pvc.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pvc.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: grafana
     app: grafana
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
