--- a/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pv.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: grafana
     app: grafana
 spec:
+  storageClassName: manual
   capacity:
     storage: 10Gi
   accessModes:
