--- a/infra/controllers/storage/redis/pv.yaml
+++ b/infra/controllers/storage/redis/pv.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: redis
     app: redis
 spec:
+  storageClassName: manual
   capacity:
     storage: 2Gi
   accessModes:
