--- a/apps/processing/kustomization.yaml
+++ b/apps/processing/kustomization.yaml
@@ -2,21 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - pv.yaml
-  - pvc.yaml
-  - repository.yaml
-  - release.yaml
-secretGenerator:
-  - name: rabbit-secret
-    namespace: processing
-    envs:
-      - rabbit-secret.env
-    options:
-      disableNameSuffixHash: true
-configMapGenerator:
-  - name: rabbit-values
-    namespace: processing
-    files:
-      - values.yaml=rabbit-values.yaml
-configurations:
-  - kustomizeconfig.yaml
+  - rabbit
