--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -14,15 +14,6 @@ spec:
         app: ingest-ui
     spec:
       containers:
-        - name: python-container
-          image: python:3.10-slim
-          volumeMounts:
-            - mountPath: /scripts
-#              subPath: ui.py
-              name: python-scripts
-          command: ["python", "/scripts/ui.py"]
-      volumes:
-        - name: python-scripts
-          hostPath:
-            path: /var/data/persistence/python-scripts
-            type: Directory
+        - name: ingest-ui
+          image: ghcr.io/marcin795/ingest:latest
+          imagePullPolicy: Always
