--- a/apps/processing/download/deployment.yaml
+++ b/apps/processing/download/deployment.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: downloader
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: downloader
           image: ghcr.io/marcin795/download:latest
