--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: ingest-ui
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: ingest-ui
           image: ghcr.io/marcin795/ingest:latest
