--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -18,6 +18,9 @@ spec:
       containers:
         - name: ingest-ui
           image: ghcr.io/marcin795/ingest:latest
+          ports:
+            - containerPort: 8000
+              name: ingest-ui
           imagePullPolicy: Always
           envFrom:
             - secretRef:
