--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -7,10 +7,12 @@ spec:
   replicas: 1
   selector:
     matchLabels:
+      app.kubernetes.io/name: ingest-ui
       app: ingest-ui
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: ingest-ui
         app: ingest-ui
     spec:
       imagePullSecrets:
