--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - name: ghcr-secret
       containers:
         - name: ingest-ui
-          image: ghcr.io/marcin795/ingest:latest
+          image: ghcr.io/marcin795/processing-ingest:latest
           ports:
             - containerPort: 8000
               name: ingest-ui
