--- a/infra/configs/cilium/announcement-policy.yaml
+++ b/infra/configs/cilium/announcement-policy.yaml
@@ -6,6 +6,7 @@ spec:
   loadBalancerIPs: true
   interfaces:
     - enp3s0
+    - tailscale0
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
