--- a/infra/controllers/storage/postgres/service.yaml
+++ b/infra/controllers/storage/postgres/service.yaml
@@ -20,6 +20,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: postgres-tailscale
+  namespace: postgres
+  labels:
+    app.kubernetes.io/name: postgres
+    app: postgres
+  annotations:
+    io.cilium/lb-ipam-ips: 100.104.23.110
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    app.kubernetes.io/name: postgres
+    app: postgres
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: postgres-service
   namespace: postgres
   labels:
