--- a/apps/processing/ingest/deployment.yaml
+++ b/apps/processing/ingest/deployment.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ingest-ui
+  name: frontend
   namespace: processing
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: ingest-ui
-      app: ingest-ui
+      app.kubernetes.io/name: frontend
+      app: frontend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: ingest-ui
-        app: ingest-ui
+        app.kubernetes.io/name: frontend
+        app: frontend
     spec:
       imagePullSecrets:
         - name: ghcr-secret
       containers:
-        - name: ingest-ui
-          image: ghcr.io/marcin795/processing-ingest:latest
+        - name: frontend
+          image: ghcr.io/marcin795/processing-frontend:latest
           ports:
             - containerPort: 8000
-              name: ingest-ui
+              name: frontend
           imagePullPolicy: Always
           envFrom:
             - secretRef:
