--- a/infra/controllers/network/traefik/traefik-values.yaml
+++ b/infra/controllers/network/traefik/traefik-values.yaml
@@ -38,6 +38,8 @@ ports:
         permanent: true
   websecure:
     asDefault: true
+    middlewares:
+      - traefik-authentik-middleware@kubernetescrd
     forwardedHeaders:
       trustedIPs:
         - 173.245.48.0/20
