--- a/apps/processing/ingest/ingress.yaml
+++ b/apps/processing/ingest/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: processing
   annotations:
     external-dns.alpha.kubernetes.io/target: 192.168.8.222
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-middleware@kubernetescrd
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: traefik
