--- a/apps/arr/plex/plex-values.yaml
+++ b/apps/arr/plex/plex-values.yaml
@@ -28,7 +28,6 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 32400
-  annotations:
-    io.cilium/lb-ipam-ips: 100.104.23.110
+  annotations: {}
