--- a/apps/processing/kustomization.yaml
+++ b/apps/processing/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ingest
   - download
   - database
-  - audio_extractor
+  - audio-extractor
 secretGenerator:
   - name: rabbit-credentials
     namespace: processing
