--- a/apps/processing/audio-extractor/deployment.yaml
+++ b/apps/processing/audio-extractor/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: audio_extractor
+  name: audio-extractor
   namespace: processing
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: audio_extractor
+      app: audio-extractor
   template:
     metadata:
       labels:
-        app: audio_extractor
+        app: audio-extractor
     spec:
       imagePullSecrets:
         - name: ghcr-secret
       containers:
-        - name: audio_extractor
+        - name: audio-extractor
           image: ghcr.io/marcin795/processing-audio_extractor:latest
           imagePullPolicy: Always
           envFrom:
