--- a/apps/arr/plex/kustomization.yaml
+++ b/apps/arr/plex/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - repository.yaml
   - release.yaml
   - gluetun.yaml
+  - wireguard.yaml
 configMapGenerator:
   - name: plex-values
     namespace: arr
