--- a/apps/processing/kustomization.yaml
+++ b/apps/processing/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - download
   - database
   - audio-extractor
+  - transcriber
 secretGenerator:
   - name: rabbit-credentials
     namespace: processing
