add metadata extractor

--- a/apps/processing/kustomization.yaml
+++ b/apps/processing/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - audio-extractor
   - transcriber
   - diarizer
+  - metadata-extractor
 secretGenerator:
   - name: rabbit-credentials
     namespace: processing
