add file-server, remove audio_extractor and diarizer

--- a/apps/processing/kustomization.yaml
+++ b/apps/processing/kustomization.yaml
@@ -6,10 +6,9 @@ resources:
   - ingest
   - download
   - database
-  - audio-extractor
   - transcriber
-  - diarizer
   - metadata-extractor
+  - file-server
 secretGenerator:
   - name: rabbit-credentials
     namespace: processing
