fix alertmanager pv

--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -8,6 +8,7 @@ alertmanager:
             requests:
               storage: 1Gi
           volumeName: alertmanager-pv
+          storageClassName: manual
           volumeMode: Filesystem
           selector:
             matchLabels:
