--- a/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: alertmanager
     app: alertmanager
 spec:
+  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
