--- a/apps/processing/rabbit/rabbit-values.yaml
+++ b/apps/processing/rabbit/rabbit-values.yaml
@@ -21,5 +21,10 @@ ingress:
         - rabbit.local.boomerok.dev
   ingressClassName: traefik
 
+service:
+  headless:
+    annotations:
+      io.cilium/lb-ipam-ips: 192.168.8.233
+
 metrics:
   enabled: false
