--- a/apps/processing/file-server/ingress.yaml
+++ b/apps/processing/file-server/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: processing
   annotations:
     external-dns.alpha.kubernetes.io/target: 192.168.8.222
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
   ingressClassName: traefik
   rules:
