--- a/infra/controllers/storage/postgres/statefulset.yaml
+++ b/infra/controllers/storage/postgres/statefulset.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:16.6
+          image: pgvector/pgvector:pg16
           imagePullPolicy: IfNotPresent
           env:
             - name: TZ
