--- a/apps/home-assistant/kustomization.yaml
+++ b/apps/home-assistant/kustomization.yaml
@@ -7,3 +7,8 @@ resources:
   - ingress.yaml
   - pv.yaml
   - pvc.yaml
+configMapGenerator:
+  - name: configuration.yaml
+    namespace: home-assistant
+    files:
+      - configuration.yaml=config/configuration.yaml
